--- a/cards.css
+++ b/cards.css
@@ -14,93 +14,152 @@ footer {
 .container {
 	position: relative;
 }
+// assuming "c" is a common class annotation
+//c1 => one
+//c2 => two
+// etc
+.c
+	{
+		position: absolute;
+		top:100px;
+		left: 60px;
+		width: 200px;
+		height:200px;
+		border-radius:2%;
+		
+	}
 
-#one {
-	z-index: 1000;
-	position: absolute;
-	display: block;
-	left: 420px;
-	top: 260px;
-	filter: drop-shadow(5px 10px 4px grey);
-}
+	.c1
+	{
+		background-color:tomato;
+		z-index: 100;
+	}
 
-#two {
-	z-index: 998;
-	position: absolute;
-	display: block;
-	left: 460px;
-	top: 240px;
-	filter: drop-shadow(5px 10px 4px grey);
-}
 
-#three {
-	z-index: 996;
-	position: absolute;
-	left: 500px;
-	display: block;
-	top: 220px;
-	filter: drop-shadow(5px 10px 4px grey);
-}
+	.c2
+	{
+		background-color:dodgerblue;
+		left: 40px;
+		top: 120px;
+		bottom: 120px;
+		height: 160px;
+		z-index: 90;
+	}
 
-#four {
-	z-index: 994;
-	position: absolute;
-	left: 540px;
-	display: block;
-	top: 200px;
-	filter: drop-shadow(5px 10px 4px grey);
-}
+	.c3
+	{
+		background-color:yellowgreen;
+		left: 20px;
+		top: 140px;
+		bottom: 140px;
+		height: 120px;
+		z-index: 80;
+	}
 
-#two:hover {
-	position: absolute;
-	z-index: 1001;
-	display: block;
-	cursor: pointer;
-	left: 420px;
-	top: 260px;
-}
+	.c4
+	{
+		background-color:orange	;
+		left: 0px;
+		top: 160px;
+		bottom: 160px;
+		height: 80px;
+		z-index: 70;
+	}
 
-#two:hover + #one {
-	transition: 5s;
-	/*display: block;*/
-	position: absolute;
-	left: 460px;
-	z-index: 999;
-	top: 240px;
-}
 
-#three:hover {
-	position: absolute;
-	z-index: 1002;
-	display: block;
-	cursor: pointer;
-	left: 420px;
-	top: 260px;
-}
+	.c2:hover ~ .c
+	{
+		top:100px;
+		left: 250px;
+		transition: 2s;
 
-#three:hover ~ #one {
-	z-index: 996;
-	transition: 5s;
-	display: block;
-	position: absolute;
-	left: 500px;
-	top: 220px;
-}
+	}
 
-#four:hover {
-	position: absolute;
-	z-index: 1002;
-	display: block;
-	cursor: pointer;
-	left: 420px;
-	top: 260px;
-}
+	
+	.c2:hover 
+	{
+		width: 200px;
+		height:200px;
+		top: 100px;
+		transition: 2s;
 
-#four:hover ~ #one {
-	z-index: 1;
-	transition: 5s;
-	display: block;
-	position: absolute;
-	left: 540px;
-	top: 200px;
-}
+	}
+
+	.c3:hover ~ .c
+
+	{
+		top: 100px;
+		left: 350px;
+		transition: 2s;
+	}
+	.c3:hover 
+	{
+		width: 200px;
+		height:200px;
+		top: 100px;
+		transition: 2s;
+
+	}
+	.c3:hover + .c2
+	{
+	
+		width: 200px;
+		height:200px;
+		transition: 2s; 
+		left: 250px;
+		top: 100px;
+
+	}
+
+
+	.c4:hover ~ .c
+	{
+		left: 100px;
+		transition: 2s;
+
+	}
+	.c4:hover 
+	{
+		width: 200px;
+		height:200px;
+		top: 100px;
+		transition: 2s;
+
+	}
+
+	.c4:hover + .c3
+	{
+		width: 200px;
+		height:200px;
+		transition: 2s; 
+		left:250px;
+		top: 100px;
+
+		/*top: 100px;*/
+	}
+
+	.c4:hover ~ .c2
+	{
+		width: 200px;
+		height:200px;
+		transition: 2s; 
+		left:350px;
+		top: 100px;
+		
+	}	
+
+	.c4:hover ~ .c1
+	{
+		width: 200px;
+		height:200px;
+		transition: 1s; 
+		left:450px;
+		top: 100px;
+
+		
+	}	
+	.c4:hover .y
+	{
+		 height:120px;
+		
+	}
